--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.SignupActivity">
+    tools:context=".presentation.signup.SignupActivity">
 
     <TextView
         android:id="@+id/tv_signup_title"
@@ -37,6 +37,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/signup_input_id"
+        android:inputType="text"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/tv_signup_id"
         app:layout_constraintStart_toStartOf="@id/tv_signup_id"
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/signup_input_pw"
         android:inputType="textPassword"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/tv_signup_pw"
         app:layout_constraintStart_toStartOf="@id/tv_signup_pw"
@@ -73,15 +76,17 @@
         android:layout_marginVertical="30dp"
         android:text="@string/signup_nickname"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_signup_pw"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_signup_pw" />
 
     <EditText
         android:id="@+id/et_signup_nickname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/signup_input_nickname"
+        android:inputType="text"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/tv_signup_nickname"
         app:layout_constraintStart_toStartOf="@id/tv_signup_nickname"
@@ -95,15 +100,17 @@
         android:layout_marginVertical="30dp"
         android:text="@string/signup_mbti"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />
 
     <EditText
         android:id="@+id/et_signup_mbti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/signup_input_mbti"
+        android:hint="@string/signup_imput_mbti"
+        android:inputType="text"
+        android:maxLines="1"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/tv_signup_mbti"
         app:layout_constraintStart_toStartOf="@id/tv_signup_mbti"
