--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/tv_add_friend_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="100dp"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/tv_add_friend_music"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="30dp"
@@ -57,12 +57,13 @@
 
     <Button
         android:id="@+id/bt_add_friend"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="50dp"
         android:text="등록하기"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_input_friend_music"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
