--- a/app/src/main/res/layout/item_myprofile.xml
+++ b/app/src/main/res/layout/item_myprofile.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_home_post_profile"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/iv_my_profile"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_margin="15dp"
@@ -14,16 +14,9 @@
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeWidth="0dp">
-
-        <ImageView
-            android:id="@+id/iv_my_profile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="friend_image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/baseline_person_24" />
-    </com.google.android.material.card.MaterialCardView>
+        app:shapeAppearance="@style/FriendImageCircle"
+        app:srcCompat="@drawable/baseline_person_24"
+        app:strokeWidth="0dp" />
 
     <TextView
         android:id="@+id/tv_my_name"
@@ -34,7 +27,7 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cv_home_post_profile"
+        app:layout_constraintStart_toEndOf="@id/iv_my_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
 
