--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.NOWSOPTAndroid" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.NOWSOPTAndroid" parent="Base.Theme.NOWSOPTAndroid" />
+
+    <style name="FriendImageCircle">
+        <item name="cornerSize">75%</item>
+    </style>
 </resources>
