--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.signup.SignupActivity">
+    tools:context=".presentation.signup.SignUpActivity">
 
     <TextView
         android:id="@+id/tv_signup_title"
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="30dp"
-        android:text="@string/signup_mbti"
+        android:text="@string/signup_phone_number"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
         android:id="@+id/et_signup_mbti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/signup_imput_mbti"
+        android:hint="@string/signup_input_phone_number"
         android:inputType="text"
         android:maxLines="1"
         android:textSize="20sp"
