--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.main.mypage.MypageFragment">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/tv_user_id"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="id"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_user_nickname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="nickname"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@id/tv_user_id"
+        app:layout_constraintStart_toStartOf="@id/tv_user_id"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
+
+    <TextView
+        android:id="@+id/tv_user_phone_number"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="phone"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@id/tv_user_nickname"
+        app:layout_constraintStart_toStartOf="@id/tv_user_nickname"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_nickname" />
 
     <Button
         android:id="@+id/bt_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="계정삭제"/>
+        android:text="자동로그인삭제"
+        app:layout_constraintEnd_toEndOf="@id/tv_user_phone_number"
+        app:layout_constraintStart_toStartOf="@id/tv_user_phone_number"
+        app:layout_constraintTop_toBottomOf="@id/tv_user_phone_number" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
